services/secrets/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secrets-api
  namespace: secrets
spec:
  ingressClassName: traefik
  rules:
  - host: secrets.completeautomate.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: infisical
            port:
              number: 80
