services/secrets/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secrets
  namespace: secrets
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: authelia-authelia-forwardauth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: secrets.completeautomate.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: infisical
            port:
              number: 80
